--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=demo
 
-spring.datasource.url = jdbc:h2:mem:ecom
+spring.datasource.url = jdbc:h2:mem:commerce
 spring.datasource.driverClassName = org.h2.Driver
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql = true
+
+spring.jpa.defer-datasource-initialization = true
