--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=demo
 
-spring.datasource.url = jdbc:h2:mem:commerce
-spring.datasource.driverClassName = org.h2.Driver
+# H2 in-memory database setup
+spring.datasource.url=jdbc:h2:mem:commerce
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql = true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 
-spring.jpa.defer-datasource-initialization = true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
